--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ html,body{
 }
 #panel-1{
    height:100%;
-   background: radial-gradient(circle, rgb(232, 244, 53) 0%, rgba(252,70,107,1) 100%);
+   background: radial-gradient(circle, rgb(183, 194, 27) 0%, rgb(232, 19, 62) 100%);
 }
 #panel-2{
    height:100%;
    display:none;
-   background: radial-gradient(circle, rgb(152, 206, 233) 0%, rgba(131,133,190,1) 58%, rgba(31,48,116,1) 100%);;
+   background: radial-gradient(circle, rgb(95, 174, 213) 0%, rgb(92, 95, 156) 58%, rgb(13, 28, 89) 100%);;
 }
 button{
    padding:10px;
@@ -36,7 +36,7 @@ h1{
     padding:150px 0 50px 0;
     font-family: 'Oswald', sans-serif;
     font-size:54px;
-    color: rgb(53, 86, 26);
+    color: rgb(129, 14, 14);
     text-shadow: 2px 2px 4px #de0909;
  }
  p{
@@ -48,7 +48,8 @@ h1{
     padding:150px 0 50px 0;
     font-family: 'Oswald', sans-serif;
     font-size:54px;
-    color: rgb(7, 16, 134);
+    color: rgb(206, 126, 42);
     text-shadow: 2px 2px 4px #810385;
  }
+ 
  
