--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-   background:rgb(250, 145, 145);
-}
 *:before,
 *:after{
   box-sizing:border-box;
@@ -11,13 +8,13 @@ html,body{
   padding:0;
   text-align:center;
 }
-#panel-1{
-  height:100%;
-  background: radial-gradient(circle, rgb(183, 194, 27) 0%, rgb(232, 19, 62) 100%);
-}
-#panel-2{
+#color-1{
   height:100%;
   display:none;
+  background: radial-gradient(circle, rgb(183, 194, 27) 0%, rgb(232, 19, 62) 100%);
+}
+#color-2{
+  height:100%;
   background: radial-gradient(circle, rgb(95, 174, 213) 0%, rgb(92, 95, 156) 58%, rgb(13, 28, 89) 100%);;
 }
 button{
@@ -43,7 +40,7 @@ p{
  font-family: 'Roboto', sans-serif; 
  font-size:18px;
 }
-h2{
+h1{
    margin:0;
    padding:150px 0 50px 0;
    font-family: 'Oswald', sans-serif;
